@@ -8,6 +8,7 @@ in/out of combat (beneficial) or if target is in/out of combat (detrimental).
 -min_dist, min_dist_mod, max_dist, max_dist_mod - Scales spell power based on targets distance from caster.
 *This will require further work to fully implement but will work with 90% of live spells as is.
 *If making custom spells do not include effects that can't be scaled (like a spell trigger)
+- min_rage sets minimum distance range that must be away from target.
 
 Required SQL: utils/sql/git/required/2014_08_02_spells_new.sql
 
